--- a/package.json
+++ b/package.json
@@ -42,9 +42,12 @@
   },
   "devDependencies": {
     "ava": "^0.15.2",
-    "babel-eslint": "^6.1.0",
+    "babel-eslint": "^6.1.2",
     "babel-preset-es2015": "^6.9.0",
     "enzyme": "^2.3.0",
+    "eslint": "^3.2.2",
+    "eslint-config-airbnb": "^10.0.0",
+    "eslint-plugin-react": "^6.0.0",
     "ghooks": "^1.3.2",
     "mockery": "^1.7.0",
     "nyc": "^7.0.0",
