--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -19,6 +19,12 @@ def getPassword(String currentUser, String keyChain) {
       stdout.toString().trim()
 }
 
+def getNpmVersion() {
+    def inputFile = new File("../package.json")
+    def packageJson = new JsonSlurper().parseText(inputFile.text)
+    return packageJson["version"]
+}
+
 
 /**
  * The react.gradle file registers a task for each build variant (e.g. bundleDebugJsAndAssets
@@ -102,7 +108,7 @@ def enableProguardInReleaseBuilds = false
 
 
 def pass = getPassword("travis","android_keystore_pMoves")
-
+def ver = getNPMVersion()
 
 android {
     compileSdkVersion 23
@@ -113,7 +119,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
-        versionName "1.0"
+        versionName ver
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
