--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -152,10 +152,15 @@ android {
         }
     }
     buildTypes {
+        debug {
+            manifestPlaceholders = [permissionName: "MADE.UP.To.Make.SYSTEM_ALERT_WINDOW.removal.work"]
+
+        }
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
             signingConfig signingConfigs.release
+            manifestPlaceholders = [permissionName: "android.permission.SYSTEM_ALERT_WINDOW"]
         }
     }
     // applicationVariants are e.g. debug, release
